# nsis

./: CMakeLists.txt  default.nix  nsis.nix  nsis2.nix  stub.nix
Source/: Platform.h
Source/exehead/: Main.cpp  util.h
Source/zlib/: INFBLOCK.c
nix/: nsis-sconf.h  nsis-version.h
